// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio demo -- group 1`] = `
.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c22 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c22:last-child {
  margin-right: 0;
}

.c7 .c23+.c23 {
  margin-left: -1px;
}

.c7 .c21 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c21:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c21:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              button
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              tag
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              card
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              text
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              1
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              2
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              3
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c7"
    >
      <span
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c10"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c10"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c10"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-disabled 1`] = `
.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c2 > * {
  font-size: 12px;
}

.c2 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c2 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c2 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c2:hover .uc-fe-radio-icon-wrap,
.c2.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c2.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c2.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c2.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c5 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c5:last-child {
  margin-right: 0;
}

.c0 .c6+.c6 {
  margin-left: -1px;
}

.c0 .c4 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
        disabled=""
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
        disabled=""
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
        disabled=""
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-options 1`] = `
.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c2 > * {
  font-size: 12px;
}

.c2 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c2 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c2 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c2:hover .uc-fe-radio-icon-wrap,
.c2.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c2.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c2.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c2.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c5 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c5:last-child {
  margin-right: 0;
}

.c0 .c6+.c6 {
  margin-left: -1px;
}

.c0 .c4 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          option-1
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          option-2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          option-3
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          radio-1
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          radio-2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          radio-3
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-size 1`] = `
.c3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c3:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c5:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 11px;
  padding-right: 11px;
}

.c7:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c2.c2 {
  min-width: 56px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c2.c2:hover {
  z-index: 3;
}

.c4.c4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c4.c4:hover {
  z-index: 3;
}

.c6.c6 {
  min-width: 80px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c6.c6:hover {
  z-index: 3;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c8,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c8:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c9 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c9:last-child {
  margin-right: 0;
}

.c0 .c10+.c10 {
  margin-left: -1px;
}

.c0 .c1 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c1:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c1:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        3
      </button>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-styleType 1`] = `
.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c6:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c2 > * {
  font-size: 12px;
}

.c2 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c2 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c2 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c2:hover .uc-fe-radio-icon-wrap,
.c2.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c2.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c2.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c2.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c5.c5 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c5.c5:hover {
  z-index: 3;
}

.c8 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
}

.c8:hover {
  color: #3860f4;
}

.c15 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
  font-weight: bold;
}

.c11 {
  padding: 16px;
  min-height: 20px;
}

.c10 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c10 .c16 {
  color: #c3cad9;
}

.c10 .c14 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c10:hover {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
  border-color: transparent;
}

.c10:hover .c16 {
  color: #3357df;
}

.c13 {
  padding: 2px 0;
  box-sizing: border-box;
  cursor: pointer;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  line-height: normal;
  color: #0a1633;
}

.c13 > span {
  display: table;
  height: 100%;
}

.c13 > span > span {
  padding: 0 12px;
  border-color: #d2d6ea;
  border-style: solid;
  border-width: 0 1px;
  height: 100%;
  display: table-cell;
  vertical-align: middle;
}

.c13:hover {
  color: #3860f4;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .c7 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .c7:last-child {
  margin-right: 0;
}

.c0 .c9 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c9:last-child {
  margin-right: 0;
}

.c0 .c12+.c12 {
  margin-left: -1px;
}

.c0 .c4 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c4 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c5 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c6"
        type="button"
      >
        1
      </button>
      <button
        class="c4 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c5 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c6"
        type="button"
      >
        2
      </button>
      <button
        class="c4 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c5 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c6"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c8"
      >
        1
      </div>
      <div
        class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c8"
      >
        2
      </div>
      <div
        class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c8"
      >
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c11"
        >
          1
        </div>
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c11"
        >
          2
        </div>
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c11"
        >
          3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c12 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c13"
      >
        <span>
          <span>
            1
          </span>
        </span>
      </div>
      <div
        class="c12 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c13"
      >
        <span>
          <span>
            2
          </span>
        </span>
      </div>
      <div
        class="c12 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c13"
      >
        <span>
          <span>
            3
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c14 c15"
        >
          card
        </div>
        <div
          class="c11"
        >
          1
        </div>
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c14 c15"
        >
          card
        </div>
        <div
          class="c11"
        >
          2
        </div>
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c10"
      >
        <div
          class="c14 c15"
        >
          card
        </div>
        <div
          class="c11"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-uncontrolled 1`] = `
.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c2 > * {
  font-size: 12px;
}

.c2 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c2 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c2 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c2:hover .uc-fe-radio-icon-wrap,
.c2.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c2.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c2.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c2.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c2.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c5 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c5:last-child {
  margin-right: 0;
}

.c0 .c6+.c6 {
  margin-left: -1px;
}

.c0 .c4 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        checked=""
        class="c1 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          1
        </span>
      </span>
      <span
        checked=""
        class="c1 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          2
        </span>
      </span>
      <span
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <span
          class="uc-fe-radio-icon-wrap"
        >
          <svg
            class="uc-fe-radio-icon c3"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </span>
        <span
          class="uc-fe-radio-content"
        >
          3
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio 1`] = `
.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c22 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c22:last-child {
  margin-right: 0;
}

.c7 .c23+.c23 {
  margin-left: -1px;
}

.c7 .c21 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c21:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c21:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              button
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              tag
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              card
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              text
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c10"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        checked
      </span>
    </span>
  </div>
</div>
`;

exports[`Radio demo -- radio-checked 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c1 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-radio-icon-wrap,
.c1.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c1.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c3 .c0,
.c3 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c3 .c0:last-child,
.c3 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        common
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        checked
      </span>
    </span>
  </div>
</div>
`;

exports[`Radio demo -- radio-disabled 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c1 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-radio-icon-wrap,
.c1.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c1.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c3 .c0,
.c3 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c3 .c0:last-child,
.c3 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        common
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
      disabled=""
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        disabled
      </span>
    </span>
  </div>
</div>
`;

exports[`Radio demo -- radio-size 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c3 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c3 > * {
  font-size: 12px;
}

.c3 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c3 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c3 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c3:hover .uc-fe-radio-icon-wrap,
.c3.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c3.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c3.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c3.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c3.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c3.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 24px;
  line-height: 24px;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c1 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-radio-icon-wrap,
.c1.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c1.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c4 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 32px;
  line-height: 32px;
  font-size: 0;
  color: #0a1633;
}

.c4 > * {
  font-size: 12px;
}

.c4 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c4 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c4 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c4:hover .uc-fe-radio-icon-wrap,
.c4.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c4.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c4.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c4.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c4.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c4.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c5 .c0,
.c5 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c5 .c0:last-child,
.c5 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        sm
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c3"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        md
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-default c4"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        lg
      </span>
    </span>
  </div>
</div>
`;

exports[`Radio demo -- radio-styleType 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c5:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c1 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-radio-icon-wrap,
.c1.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c1.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c4.c4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c4.c4:hover {
  z-index: 3;
}

.c7 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
}

.c7:hover {
  color: #3860f4;
}

.c14 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
  font-weight: bold;
}

.c10 {
  padding: 16px;
  min-height: 20px;
}

.c9 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c9 .c16 {
  color: #c3cad9;
}

.c9 .c13 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c9:hover {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
  border-color: transparent;
}

.c9:hover .c16 {
  color: #3357df;
}

.c12 {
  padding: 2px 0;
  box-sizing: border-box;
  cursor: pointer;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  line-height: normal;
  color: #0a1633;
}

.c12 > span {
  display: table;
  height: 100%;
}

.c12 > span > span {
  padding: 0 12px;
  border-color: #d2d6ea;
  border-style: solid;
  border-width: 0 1px;
  height: 100%;
  display: table-cell;
  vertical-align: middle;
}

.c12:hover {
  color: #3860f4;
}

.c15 .c0,
.c15 .c6 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c15 .c0:last-child,
.c15 .c6:last-child {
  margin-right: 0;
}

.c15 .c8 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c15 .c8:last-child {
  margin-right: 0;
}

.c15 .c11+.c11 {
  margin-left: -1px;
}

.c15 .c3 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c15 .c3:first-child {
  border-radius: 2px 0 0 2px;
}

.c15 .c3:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        default
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="c3 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
      type="button"
    >
      button
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c6 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c7"
    >
      tag
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c9"
    >
      <div
        class="c10"
      >
        card
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c12"
    >
      <span>
        <span>
          text
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c9"
    >
      <div
        class="c13 c14"
      >
        card
      </div>
      <div
        class="c10"
      />
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-uncontrolled 1`] = `
.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c1 > * {
  font-size: 12px;
}

.c1 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c1 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c1 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c1:hover .uc-fe-radio-icon-wrap,
.c1.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c1.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c1.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c1.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c1.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c3 .c0,
.c3 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c3 .c0:last-child,
.c3 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        controlled
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <span
        class="uc-fe-radio-icon-wrap"
      >
        <svg
          class="uc-fe-radio-icon c2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="6"
          />
        </svg>
      </span>
      <span
        class="uc-fe-radio-content"
      >
        uncontrolled
      </span>
    </span>
  </div>
</div>
`;
